--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -49,10 +49,12 @@
             <select class="ui inline __search dropdown" multiple="multiple" name="exp_selected">
                 <option value="">Experiments</option>
                 {# for c in cl if not c.experiment_obj.restricted or current_experimenter.is_authorized(c.experiment) #}
+		{% if current_experimenter is defined and current_experimenter.extra is defined %}
                 {% for e in experiments %}
                     <!-- e: "{{e}}" "{{e.4}}" -->
                     <option value="{{e.0}}" {{'selected' if e.4 or e.0 in current_experimenter.extra.selected }}>{{e.0}}</option>
                 {% endfor %}
+		{% endif %}
             </select>
 <!--
             <div class="ui compact inline __primary submit button">Save</div>
@@ -143,6 +145,7 @@
 
      {# for c in cl if not c.experiment_obj.restricted or current_experimenter.is_authorized(c.experiment) #}
      {# for c in cl if not c.experiment_obj.restricted or c.experiment in current_experimenter.extra.selected #}
+    {% if current_experimenter is defined and current_experimenter.extra is defined %}
      {% for c in cl if c.experiment in current_experimenter.extra.selected %}
      {% set outer_loop = loop %}
             <tr>
@@ -183,6 +186,7 @@
          </tr>
 
      {% endfor %}
+     {% endif %}
 
     </table>
   </div>
