--- a/webservice/templates/campaign_definition_edit.html
+++ b/webservice/templates/campaign_definition_edit.html
@@ -223,6 +223,40 @@
   <div class="ui hidden divider"></div>
 </div> <!-- Ends edit_param_modal  -->
 
+<div class="ui small modal" id="edit_recovery_param_modal">
+  <i class="close icon"></i>
+  <div class="header">
+    Definition Recovery Parameters Editor
+  </div>
+  <div class="ui text container">
+    <div class="scrollable">
+      <table class="ui celled table" id="ep_table">
+	<thead>
+	  <tr>
+	    <th>MVI Key</th>
+	    <th>MVI Value</th>
+	    <th></th>
+	  </tr>
+	</thead>
+	<tbody id="repo_tbody">
+	</tbody>
+	<tfoot>
+	  <tr>
+	    <th colspan="3">
+	      <div class="actions">
+		<button class="ui button deny red">Cancel</button>
+		<button class="ui button approve teal" {{ 'disabled' if (data.authorized==False) }}>Accept</button>
+	      </div>
+	    </th>
+	  </tr>
+	</tfoot>
+      </table>
+    </div>
+  </div>
+  <div class="ui hidden divider"></div>
+
+</div> <!-- Ends edit_recovery_param_modal  -->
+
 <div class="ui large modal" id="edit_recovery_modal">
   <i class="close icon"></i>
   <div class="header">
@@ -249,8 +283,8 @@
                     {% endfor %}
                     </select>
                 </td>
-                <td id="re_recover_p_{{i}}"> PO {{i}} </td>
-                <td><i class="large edit link blue icon"  onclick="edit_definition({{loop.index}});"></i>
+                <td id="re_recover_p_{{i}}">  </td>
+                <td><i class="large edit link blue icon"  onclick="edit_recovery_params_o({{i}});"></i>
             </tr>
          {% endfor %}
 	</tbody>
@@ -315,6 +349,9 @@ function create_row(index, key, value) {
 }
 
 var ep_parms = [];
+var repo_parms = [];  //recovery parameters override
+   
+// ----------------- Section for editing Recovery Launches ------------------------------
 
 $("#edit_recovery_modal_btn").click(function() {
   listLen = 5;
@@ -324,23 +361,30 @@ $("#edit_recovery_modal_btn").click(function() {
   console.log ('edit_recovery_modal_btn rlist= ' + rlist)
   var i = 0;
   for (i = 0 ; i < rlist.length; i++ ) {
-      console.log ('edit_recovery_modal_btn rlist[i][0]= ' + rlist[i][0])
+      console.log ('edit_recovery_modal_btn rlist[i][0]= ' + rlist[i][0] + ' parms = ' + rlist[i][1])
   }
   for (i = 0 ; i < rlist.length; i++ ) {
       
       var sel = "#re_recover_"+i.toString()+" option[value="+rlist[i][0]+"]";
       console.log ('edit_recovery_modal_btn sel= ' + sel + ' oparms = ' +  rlist[i][1])
-      
       $(sel).prop('selected','selected');
+      cval = rlist[i][1];
+      $("#re_recover_p_"+ i).text(cval);
+
   }
   
   $("#edit_recovery_modal").modal({
     closable  : false,
     onApprove : function(){
+      console.log ('edit_recovery_modal approve');
       var rlist = [];
+      var rplist = [];  // override params
       var s;
+      var sp;
       for (i = 0; i < listLen ; i++) {
-         s = $("#re_recover_"+i.toString()+" option:selected").val();
+         s  = $("#re_recover_"+i.toString()+" option:selected").val();
+         sp = $("#re_recover_p_"+i.toString()).text();
+         console.log(' i= ' + i + ' s = ' + s + ' sp = ' + sp);
          if (s) {
              rlist.push(s);
          }
@@ -353,8 +397,50 @@ $("#edit_recovery_modal_btn").click(function() {
     onDeny : function(){
       $("#definition_add_edit_modal").modal('show');
     },
-    }).modal('show');
+
+   }).modal('show');
 });
+
+// -----------  Editing recovery params override here ...
+
+
+  function edit_recovery_params_o(index) {
+    console.log(' edit_recovery_params for ' + index);
+    var rec_parms_str = $("#re_recover_p_"+index).text();
+    console.log(' edit_recovery_params_o, rec_parms_str = ' + rec_parms_str);
+    if (rec_parms_str != "") {
+      repo_parms = JSON.parse(rec_parms_str);
+      console.log(' edit_recovery_params_o, repo_parms = ' + repo_parms);
+    }
+    ep_build_table_body('from_rec');
+  
+   $("#edit_recovery_param_modal").modal({
+     closable  : false,
+     onApprove : function(){
+      var data = ep_build_parms_string();
+      if (data[0] == "") {
+        console.log ('edit_recovery_param_modal, saving');
+        //$("#ae_definition_parameters_text").val(data[1]);
+        //$("#ae_definition_parameters").val(data[1]);
+        //$("#definition_add_edit_modal").modal('show');
+      } else {
+          return false;
+      }
+    },
+    onDeny : function(){
+      $("#definition_add_edit_modal").modal('show');
+    },
+    }).modal('show');
+
+  }
+  
+// -----------  Done Editing recovery params override here ...
+
+// -----------------------------------------------------------------------------
+
+// ----------------- Done section for editing Recovery Launches ------------------------------
+
+// ----------------- Section for editing Definition Paramers ------------------------------
 
 $("#edit_param_modal_btn").click(function() {
   var parms_str = $("#ae_definition_parameters").val();
@@ -406,12 +492,34 @@ function ep_build_parms_string() {
   return [message, parms];
 } 
 
-function ep_build_table_body() {
-  $("#ep_tbody").text("");
-  if (ep_parms.length ==0) {
-    ep_parms.push(["",""]);
+//function ep_build_table_body() {
+
+function ep_build_table_body(from_where) {
+
+  
+  console.log ('ep_build_table_body ');  
+  if (typeof from_where !== 'undefined') {
+    console.log ('ep_build_table_body ,from_where = ' +  from_where);  
+    if (repo_parms.length ==0) {
+        repo_parms.push(["",""]);
+    }
+    var local_ep_parms = repo_parms
+    $("#repo_tbody").text("");
+
+  } else {
+    console.log ('ep_build_table_body ,normal def');  
+    if (ep_parms.length ==0) {
+        ep_parms.push(["",""]);
+    }
+    var local_ep_parms = ep_parms
+    $("#ep_tbody").text("");
+
   }
-  for (index = 0; index < ep_parms.length; index++) {
+  //$("#ep_tbody").text("");
+
+  console.log (' local_ep_parms ,len = ' + local_ep_parms.length);
+//  for (index = 0; index < ep_parms.length; index++) {
+  for (index = 0; index < local_ep_parms.length; index++) {
     var ep_row = "ep_row_" + index;
     var ep_key = "ep_key_" + index;
     var ep_val = "ep_val_" + index;		  
@@ -419,13 +527,13 @@ function ep_build_table_body() {
     row +=       '<td class="brown">'
     row +=          '<div class="ui fluid input">'
     row +=             '<label></label>'
-    row +=             '<input type="text" id="' +ep_key+  '" value="' +ep_parms[index][0]+ '">'
+    row +=             '<input type="text" id="' +ep_key+  '" value="' + local_ep_parms[index][0]+ '">'
     row +=          '</div>'
     row +=       '</td>';
     row +=       '<td>'
     row +=          '<div class="ui fluid input">'
     row +=             '<label></label>'
-    row +=             '<input type="text" id="' +ep_val+  '" value="' +ep_parms[index][1]+ '">'
+    row +=             '<input type="text" id="' +ep_val+  '" value="' + local_ep_parms[index][1]+ '">'
     row +=          '</div>'
     row +=       '</td>';
     row +=       '<td  class="collapsing">'
@@ -435,9 +543,19 @@ function ep_build_table_body() {
     row +=	   '<i class="blue icon link arrow square down" onclick="ep_down_button('+index+');"></i>'
     row +=       '</td>';
     row +=     '</tr>'
-    $("#ep_tbody").append(row);
+
+    if (typeof from_where !== 'undefined') {
+      $("#repo_tbody").append(row);
+    } else {
+      $("#ep_tbody").append(row);
+    }
   }		
-  $("#edit_param_modal").modal('refresh');
+  if (typeof from_where !== 'undefined') {
+     console.log ('show rec parms');
+     $("#edit_recovery_param_modal").modal('refresh');
+  } else {
+     $("#edit_param_modal").modal('refresh');
+  }
 }
 
 function rebuild_ep_parms() {
