--- a/webservice/templates/campaign_definition_edit.html
+++ b/webservice/templates/campaign_definition_edit.html
@@ -233,8 +233,8 @@
       <table class="ui celled table" id="repo_table">
 	<thead>
 	  <tr>
-	    <th>MVI Key</th>
-	    <th>MVI Value</th>
+	    <th> Key</th>
+	    <th> Value</th>
 	    <th></th>
 	  </tr>
 	</thead>
@@ -260,7 +260,7 @@
 <div class="ui large modal" id="edit_recovery_modal">
   <i class="close icon"></i>
   <div class="header">
-    Definition Recovery Editor MVI
+    Definition Recovery Editor
   </div>
 <div class="ui text _container">
     <div class="_scrollable">
