fixed classname typo

--- a/webservice/templates/list_generic.html
+++ b/webservice/templates/list_generic.html
@@ -18,7 +18,7 @@
 
 {%block header%}
 <h1 class="ui header">
-     {{clasname}} Items{%include 'help_button.html'%}
+     {{classname}} Items{%include 'help_button.html'%}
                     
      <div class="sub header">
          View/Edit {{classname}} Items
