hide unused files-per-job fields

--- a/webservice/templates/campaign_definition_edit.html
+++ b/webservice/templates/campaign_definition_edit.html
@@ -144,6 +144,7 @@
           <label>Name</label>
           <input type="text" id="ae_definition_name" name="ae_definition_name" placeholder="Definition Name">
 	</div>
+       <!--
 	<div class="field">
           <label>Input Files Per Job</label>
           <input type="text" id="ae_input_files_per_job" name="ae_input_files_per_job">
@@ -152,6 +153,9 @@
           <label>Output Files Per Job</label>
           <input type="text" id="ae_output_files_per_job" name="ae_output_files_per_job">
 	</div>
+      -->
+        <input type="hidden" name="ae_output_files_per_job" value="0">
+        <input type="hidden" name="ae_input_files_per_job" value="0">
 	<div class="field">
           <label>Output File Patterns</label>
           <input type="text" id="ae_output_file_patterns" name="ae_output_file_patterns">
